# ferrolite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.superpowers/brainstorm/: .last-token
.superpowers/brainstorm/659-1782727435/content/: icon-concepts.html  waiting.html
.superpowers/brainstorm/659-1782727435/state/: server-stopped
docs/benchmarks/: 2026-06-29-m1-m2-method.md
docs/design/: EguiSlider.dc.html  Ferrolite.dc.html  ferrolite-design-system.md
docs/superpowers/plans/: 2026-06-28-ferrolite-speed-core-foundation.md  2026-06-29-custom-window-chrome-and-app-icon.md  2026-06-29-ferrolite-decode-and-catalog.md  2026-06-29-jobs-and-library-grid.md  2026-06-29-library-ingest-and-folder-management.md  2026-06-29-library-reindex-and-watcher.md  2026-06-29-viewer-and-vt-ladder.md  2026-06-30-develop-metadata-and-filters.md  2026-06-30-develop-module-and-filmstrip.md  2026-06-30-display-pipeline-reuse.md  2026-06-30-spec2-plan1-pipeline-foundation.md  2026-06-30-spec2-plan2-remaining-ops.md  2026-06-30-spec2-plan3-vt-halo-tile-producer.md  2026-06-30-spec2-plan4-develop-ui-persistence.md  2026-06-30-tags-and-filters.md  2026-06-30-viewer-open-responsiveness.md  2026-07-01-navigation-progressive-reveal-and-preview-cache.md  2026-07-01-spec3-plan1-color-and-decode-profile.md  2026-07-01-spec3-plan2-color-pipeline-wiring.md  2026-07-01-spec3-plan3-histogram-and-split.md
docs/superpowers/specs/: 2026-06-28-ferrolite-proposal.md  2026-06-28-ferrolite-speed-core-design.md  2026-06-28-ferrolite-v1-architecture-map.md  2026-06-29-custom-window-chrome-and-app-icon-design.md  2026-06-29-jobs-and-library-grid-design.md  2026-06-29-library-ingest-and-folder-management-design.md  2026-06-29-library-reindex-and-watcher-design.md  2026-06-29-viewer-and-vt-ladder-design.md  2026-06-30-develop-metadata-and-filters-design.md  2026-06-30-develop-module-and-filmstrip-design.md  2026-06-30-display-pipeline-reuse-design.md  2026-06-30-spec2-editing-design.md  2026-06-30-tags-and-filters-design.md  2026-06-30-viewer-open-responsiveness-design.md  2026-07-01-spec3-color-and-export-design.md
ferrolite-app/: Cargo.toml
ferrolite-app/assets/fonts/: LICENSE-fonts.txt
ferrolite-app/src/: app.rs  events.rs  ingest.rs  lib.rs  main.rs  metadata.rs  module.rs  state.rs  status_bar.rs  theme.rs  thumb_profile.rs
ferrolite-app/src/canvas/: callback.rs  mod.rs  shader.wgsl
ferrolite-app/src/chrome/: icon.rs  mod.rs  window_controls.rs
ferrolite-app/src/develop/: adjustment_panel.rs  crop_math.rs  crop_overlay.rs  curve_math.rs  curve_widget.rs  histogram_widget.rs  history.rs  hsl_widget.rs  mod.rs  ops_edit.rs  ops_persist.rs  split.rs
ferrolite-app/src/viewer/: callback.rs  edit_producer.rs  load.rs  mod.rs  nav.rs
ferrolite-app/src/widgets/: mod.rs  slider.rs
ferrolite-app/tests/: ingest_tree.rs
ferrolite-catalog/: Cargo.toml
ferrolite-catalog/src/: catalog.rs  error.rs  ingest.rs  lib.rs  model.rs  queries.rs  query.rs  read_pool.rs  scan.rs  schema.rs  thumbnail.rs  xmp.rs
ferrolite-catalog/tests/: catalog.rs  query_integration.rs  read_pool.rs  tree.rs
ferrolite-color/: Cargo.toml
ferrolite-color/src/: adapt.rs  camera.rs  error.rs  icc.rs  lib.rs  matrix.rs  oetf.rs  tail.rs  working_space.rs
ferrolite-decode/: Cargo.toml
ferrolite-decode/src/: color.rs  demosaic.rs  error.rs  lib.rs  metadata.rs  orient.rs  preview.rs  raw.rs  source.rs  standard.rs
ferrolite-decode/tests/: decode.rs  standard.rs
ferrolite-gpu/: Cargo.toml
ferrolite-gpu/src/: context.rs  executor.rs  lib.rs
ferrolite-image/: Cargo.toml
ferrolite-image/src/: file_kind.rs  lib.rs  linear.rs  meta.rs  orientation.rs  pixel.rs  tile.rs
ferrolite-jobs/: Cargo.toml
ferrolite-jobs/src/: lib.rs  priority.rs  queue.rs  system.rs
ferrolite-pipeline/: Cargo.toml
ferrolite-pipeline/src/: gpu_pyramid.rs  image.rs  lib.rs  nodes.rs  op.rs  pipeline.rs  serialize.rs  tile_edit.rs  uniforms.rs
ferrolite-pipeline/src/shaders/: blit.wgsl  color_matrix.wgsl  contrast.wgsl  exposure.wgsl  geometry.wgsl  hsl.wgsl  sharpen.wgsl  tone_curve.wgsl  white_balance.wgsl
ferrolite-pipeline/tests/: color_golden.rs  golden.rs
ferrolite-pipeline/tests/common/: mod.rs
ferrolite-vt/: Cargo.toml
ferrolite-vt/src/: histogram.rs  lib.rs  page_table.rs  pipelines.rs  pool.rs  producer.rs  residency.rs  source.rs  transform.rs  view.rs
ferrolite-vt/src/shaders/: display.wgsl  histogram.wgsl
ferrolite-vt/tests/: golden.rs  histogram_golden.rs
ferrolite-vt/tests/common/: mod.rs
