[package]
name = "ferrolite-app"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.29"
egui-wgpu = "0.29"
wgpu = "22"
