[package]
name = "ferrolite-app"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "ferrolite-app"
path = "src/main.rs"

[[bin]]
name = "bench_browse"
path = "src/bin/bench_browse.rs"

[lints]
workspace = true

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.29"
egui-wgpu = "0.29"
wgpu = "22"
ferrolite-jobs = { workspace = true }
ferrolite-catalog = { workspace = true }
ferrolite-decode = { workspace = true }
ferrolite-gpu = { workspace = true }
ferrolite-image = { workspace = true }
ferrolite-vt = { workspace = true }
half = { workspace = true }
image = { workspace = true, features = ["jpeg"] }
rayon = { workspace = true }
rfd = { workspace = true }

[dev-dependencies]
image = { workspace = true, features = ["png"] }
