[package]
name = "ferrolite-catalog"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ferrolite-image = { workspace = true }
ferrolite-decode = { workspace = true }
rusqlite = { workspace = true }
image = { workspace = true, features = ["jpeg"] }
fast_image_resize = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
