[package]
name = "ferrolite-decode"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ferrolite-image = { workspace = true }
rawler = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "tiff", "webp", "bmp", "gif"] }
exif = { workspace = true }
thiserror = { workspace = true }
