[package]
name = "ferrolite-gpu"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
pollster = { workspace = true }
egui-wgpu = "0.29"
